attempt to fix deployment issue that i created earlier